Fix mCSB : - check mcsb container is defined when destroy and before update - update z-index of its dragger

--- a/jquery.mCustomScrollbar.css
+++ b/jquery.mCustomScrollbar.css
@@ -104,7 +104,7 @@ y-axis
 		cursor: pointer;
 		width: 100%;
 		height: 30px; /* minimum dragger height */
-		z-index: 1;
+		z-index: 1000;
 	}
 
 	.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{ /* the dragger element */
